# DSP_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: data_dictionary.md  mitdb_record_inventory_dictionary.md  visao_geral.md
docs/src/: __init__.md  config.md
docs/src/data/: __init__.md  download_dataset.md
docs/src/visualization/: __init__.md
notebooks/: 01_EDA_Initial_Inspection.ipynb  01_Etapa.ipynb  02_Denoising_FIR.ipynb  03_Denoising_Etapa01.ipynb
src/: __init__.py  config.py
src/data/: __init__.py  download_dataset.py  summarize_mitdb_records.py
src/preprocessing/: __init__.py  fir_filters.py  gabor_filters.py  iir_filters.py  metrics.py  segments.py  simple_filters.py
src/visualization/: __init__.py  ecg_plots.py
