[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dsp-ecg-mitbih"
version = "0.1.0"
description = "Base acadêmica para análise de sinais de ECG (MIT-BIH, WFDB)."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]